Fix:body scrollbar 삭제

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -40,20 +40,7 @@ body {
 
 /* 스크롤바 변경 */
 body::-webkit-scrollbar {
-  width: 0.8rem;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #222222;
-  border-radius: 1rem;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background-color: #f400b0;
-}
-
-body::-webkit-scrollbar-track {
-  background-color: #1f2122;
+  display: none;
 }
 
 button {
